; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/ieframe/extr_ieframe_main.c_get_typeinfo.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/ieframe/extr_ieframe_main.c_get_typeinfo.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@typelib = common dso_local global i32 0, align 4
@typeinfos = common dso_local global i32** null, align 8
@tid_ids = common dso_local global i32* null, align 8
@.str = private unnamed_addr constant [36 x i8] c"GetTypeInfoOfGuid(%s) failed: %08x\0A\00", align 1
@S_OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @get_typeinfo(i64 %0, i32** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  %5 = alloca i32**, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  store i64 %0, i64* %4, align 8
  store i32** %1, i32*** %5, align 8
  %8 = load i32, i32* @typelib, align 4
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %12, label %10

10:                                               ; preds = %2
  %11 = call i32 (...) @load_typelib()
  store i32 %11, i32* %6, align 4
  br label %12

12:                                               ; preds = %10, %2
  %13 = load i32, i32* @typelib, align 4
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %17, label %15

15:                                               ; preds = %12
  %16 = load i32, i32* %6, align 4
  store i32 %16, i32* %3, align 4
  br label %61

17:                                               ; preds = %12
  %18 = load i32**, i32*** @typeinfos, align 8
  %19 = load i64, i64* %4, align 8
  %20 = getelementptr inbounds i32*, i32** %18, i64 %19
  %21 = load i32*, i32** %20, align 8
  %22 = icmp ne i32* %21, null
  br i1 %22, label %54, label %23

23:                                               ; preds = %17
  %24 = load i32, i32* @typelib, align 4
  %25 = load i32*, i32** @tid_ids, align 8
  %26 = load i64, i64* %4, align 8
  %27 = getelementptr inbounds i32, i32* %25, i64 %26
  %28 = load i32, i32* %27, align 4
  %29 = call i32 @ITypeLib_GetTypeInfoOfGuid(i32 %24, i32 %28, i32** %7)
  store i32 %29, i32* %6, align 4
  %30 = load i32, i32* %6, align 4
  %31 = call i64 @FAILED(i32 %30)
  %32 = icmp ne i64 %31, 0
  br i1 %32, label %33, label %42

33:                                               ; preds = %23
  %34 = load i32*, i32** @tid_ids, align 8
  %35 = load i64, i64* %4, align 8
  %36 = getelementptr inbounds i32, i32* %34, i64 %35
  %37 = load i32, i32* %36, align 4
  %38 = call i32 @debugstr_guid(i32 %37)
  %39 = load i32, i32* %6, align 4
  %40 = call i32 @ERR(i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str, i64 0, i64 0), i32 %38, i32 %39)
  %41 = load i32, i32* %6, align 4
  store i32 %41, i32* %3, align 4
  br label %61

42:                                               ; preds = %23
  %43 = load i32**, i32*** @typeinfos, align 8
  %44 = load i64, i64* %4, align 8
  %45 = getelementptr inbounds i32*, i32** %43, i64 %44
  %46 = bitcast i32** %45 to i8**
  %47 = load i32*, i32** %7, align 8
  %48 = call i64 @InterlockedCompareExchangePointer(i8** %46, i32* %47, i32* null)
  %49 = icmp ne i64 %48, 0
  br i1 %49, label %50, label %53

50:                                               ; preds = %42
  %51 = load i32*, i32** %7, align 8
  %52 = call i32 @ITypeInfo_Release(i32* %51)
  br label %53

53:                                               ; preds = %50, %42
  br label %54

54:                                               ; preds = %53, %17
  %55 = load i32**, i32*** @typeinfos, align 8
  %56 = load i64, i64* %4, align 8
  %57 = getelementptr inbounds i32*, i32** %55, i64 %56
  %58 = load i32*, i32** %57, align 8
  %59 = load i32**, i32*** %5, align 8
  store i32* %58, i32** %59, align 8
  %60 = load i32, i32* @S_OK, align 4
  store i32 %60, i32* %3, align 4
  br label %61

61:                                               ; preds = %54, %33, %15
  %62 = load i32, i32* %3, align 4
  ret i32 %62
}

declare dso_local i32 @load_typelib(...) #1

declare dso_local i32 @ITypeLib_GetTypeInfoOfGuid(i32, i32, i32**) #1

declare dso_local i64 @FAILED(i32) #1

declare dso_local i32 @ERR(i8*, i32, i32) #1

declare dso_local i32 @debugstr_guid(i32) #1

declare dso_local i64 @InterlockedCompareExchangePointer(i8**, i32*, i32*) #1

declare dso_local i32 @ITypeInfo_Release(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
